website/code/pidigits-sablevm.log
BUILD COMMANDS FOR: pidigits.sablevm

Sun Dec  4 03:37:06 PST 2005

rm: cannot remove `pidigits.sablevm_run/pidigits.java': Permission denied
rm: cannot remove `pidigits.sablevm_run/pidigits.class': Permission denied
rm: cannot remove `pidigits.sablevm_run/PiDigitSpigot.class': Permission denied
rm: cannot remove `pidigits.sablevm_run/Transformation.class': Permission denied
make[3]: [pidigits.sablevm_run] Error 1 (ignored)
( if [ ! -d pidigits.sablevm_run ] ; then mkdir pidigits.sablevm_run ; fi )
cp /opt/shootout/shootout/bench/pidigits/pidigits.sablevm pidigits.sablevm_run/pidigits.java
cp: cannot create regular file `pidigits.sablevm_run/pidigits.java': Permission denied
make[3]: [pidigits.sablevm_run] Error 1 (ignored)
( cd pidigits.sablevm_run ; /usr/lib/j2sdk1.4.2_05/bin/javac  -classpath '.' pidigits.java )
pidigits.java:9: error while writing pidigits: pidigits.class (Permission denied)
public class pidigits {
       ^
1 error
make[3]: [pidigits.sablevm_run] Error 1 (ignored)
touch pidigits.sablevm_run
touch: setting times of `pidigits.sablevm_run': Permission denied
make[3]: [pidigits.sablevm_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

 /usr/bin/sablevm -Y --classpath="pidigits.sablevm_run" pidigits %A


PROGRAM OUTPUT
==============
3141592653	:10
5897932384	:20
6264338327	:30
9502884197	:40
1693993751	:50
0582097494	:60
4592307816	:70
4062862089	:80
9862803482	:90
5342117067	:100
9821480865	:110
1328230664	:120
7093844609	:130
5505822317	:140
2535940812	:150
8481117450	:160
2841027019	:170
3852110555	:180
9644622948	:190
9549303819	:200
6442881097	:210
5665933446	:220
1284756482	:230
3378678316	:240
5271201909	:250
1456485669	:260
2346034861	:270
0454326648	:280
2133936072	:290
6024914127	:300
3724587006	:310
6063155881	:320
7488152092	:330
0962829254	:340
0917153643	:350
6789259036	:360
0011330530	:370
5488204665	:380
2138414695	:390
1941511609	:400
4330572703	:410
6575959195	:420
3092186117	:430
3819326117	:440
9310511854	:450
8074462379	:460
9627495673	:470
5188575272	:480
4891227938	:490
1830119491	:500
===================================
!!! Note: Truncated to 50 lines !!!
===================================
